added internationalized headings to tables

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,3 +12,25 @@ validation.user.login.pattern=Login is incorrect!
 validation.user.password.pattern=Password is incorrect!
 validation.user.email.pattern=Email is incorrect!
 welcome.message=Property message
+
+table_chamber_id=Id
+table_chamber_name=Name
+table_chamber_region=Region
+table_chamber_district=District
+table_chamber_action=Action
+table_chamber_address=Address
+menu_chambers_list=chambers list
+menu_add_chamber=add chamber
+menu_other=page
+menu_jsf=jsf test
+button_save=save
+button_remove=remove
+button_edit=edit
+
+
+label_user_reg=Author registration
+label_first_name=First name
+label_last_name=Last name
+label_email=Email
+label_login=Login
+label_password=Password
