--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -12,3 +12,25 @@ validation.user.login.pattern=Login is incorrect!
 validation.user.password.pattern=Password is incorrect!
 validation.user.email.pattern=Email is incorrect!
 welcome.message=Сообщение свойств
+
+table_chamber_id=ИД
+table_chamber_name=Название
+table_chamber_region=Регион
+table_chamber_district=Округ
+table_chamber_action=Действие
+table_chamber_address=Адрес
+menu_chambers_list=список палат
+menu_add_chamber=добавить палату
+menu_other=сраница
+menu_jsf=jsf тест
+button_save=сохранить
+button_remove=удалить
+button_edit=изменить
+
+
+label_user_reg=Author registration
+label_first_name=First name
+label_last_name=Last name
+label_email=Email
+label_login=Login
+label_password=Password
