add registration form

--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -4,13 +4,19 @@ user_create_fail=Create user failed!
 chambers.title=Chambers list (%s)
 add.title=Add chamber
 edit.title=Edit chamber
-validation.user.firstname.pattern=First name is incorrect!
+
+validation.user.firstname.pattern=The first name must begin with a capital letter!
 validation.user.firstname.size=First name must be between {min} and {max}!
-validation.user.lastname.pattern=Last name is incorrect!
+
+validation.user.lastname.pattern=Last name must begin with a capital letter!
 validation.user.lastname.size=Last name must be between {min} and {max}!
-validation.user.login.pattern=Login is incorrect!
-validation.user.password.pattern=Password is incorrect!
+
+validation.user.login.pattern=Login can contain from Latin letters, underscores, numbers and must be longer than 3 characters!
+validation.user.password.pattern=The password must be at least {min} characters in length!
 validation.user.email.pattern=Email is incorrect!
+
+user_login_exist=User with such login exists
+
 welcome.message=Property message
 
 table_chamber_id=Id
