--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -4,13 +4,19 @@ user_create_fail=Ошибка добавления пользователя
 chambers.title=Список палат (%s)
 add.title=Добавить палату
 edit.title=Изменить данные
-validation.user.firstname.pattern=First name is incorrect!
-validation.user.firstname.size=First name must be between {min} and {max}!
-validation.user.lastname.pattern=Last name is incorrect!
-validation.user.lastname.size=Last name must be between {min} and {max}!
-validation.user.login.pattern=Login is incorrect!
-validation.user.password.pattern=Password is incorrect!
-validation.user.email.pattern=Email is incorrect!
+
+validation.user.firstname.pattern=Имя должно начинаться с заглавной буквы!
+validation.user.firstname.size=Длинна имени должно быть от {min} до {max} символов!
+
+validation.user.lastname.pattern=Фамилия должна начинаться с заглавной буквы!
+validation.user.lastname.size=Длинна фамилии должна быть от {min} до {max} символов!
+
+validation.user.login.pattern=Логин может содержать латинские буквы, цифры и должен быть длиннее 3 символов!
+validation.user.password.pattern=Длинна пароля должна быть не менее {min} символов!
+validation.user.email.pattern=Email введен некоректно!
+
+user_login_exist=Пользователь с таким логином существует
+
 welcome.message=Сообщение свойств
 
 table_chamber_id=ИД
