--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -1,9 +1,8 @@
-validation.name.size=Name must be between {min} and {max}!
+validation.chamber.name.size=Name must be between {min} and {max}!
 login_failed=Login or password incorrect!
 user_create_fail=Create user failed!
 chambers.title=Chambers list (%s)
-add.title=Add chamber
-edit.title=Edit chamber
+
 
 validation.user.firstname.pattern=The first name must begin with a capital letter!
 validation.user.firstname.size=First name must be between {min} and {max}!
@@ -25,18 +24,36 @@ table_chamber_region=Region
 table_chamber_district=District
 table_chamber_action=Action
 table_chamber_address=Address
+
 menu_chambers_list=chambers list
 menu_add_chamber=add chamber
 menu_other=page
 menu_jsf=jsf test
+
 button_save=save
 button_remove=remove
 button_edit=edit
 
+button.login=Login
+button.registration=Registration
+button.send=Send
 
-label_user_reg=Author registration
-label_first_name=First name
-label_last_name=Last name
+
+label.first_name=First name
+label.last_name=Last name
 label_email=Email
-label_login=Login
-label_password=Password
+label.login=Login
+label.password=Password
+
+login.page.title=Authorization
+chambers.page.title=Chambers list
+registration.page.title=Registration
+add.page.title=Add chamber
+edit.page.title=Edit chamber
+
+menu.home=Home
+menu.test=Tests
+menu.js=js-table
+menu.rest=Rest data
+menu.login=login
+menu.logout=logout
