--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -1,9 +1,8 @@
-validation.name.size=Название палалты должно содержать от {min} до {max} символов!
+validation.chamber.name.size=Название палалты должно содержать от {min} до {max} символов!
 login_failed=Неверное сочетание логина и пароля
 user_create_fail=Ошибка добавления пользователя
 chambers.title=Список палат (%s)
-add.title=Добавить палату
-edit.title=Изменить данные
+
 
 validation.user.firstname.pattern=Имя должно начинаться с заглавной буквы!
 validation.user.firstname.size=Длинна имени должно быть от {min} до {max} символов!
@@ -25,18 +24,36 @@ table_chamber_region=Регион
 table_chamber_district=Округ
 table_chamber_action=Действие
 table_chamber_address=Адрес
+
 menu_chambers_list=список палат
 menu_add_chamber=добавить палату
 menu_other=сраница
 menu_jsf=jsf тест
+
 button_save=сохранить
 button_remove=удалить
 button_edit=изменить
 
+button.login=Войти
+button.registration=Регистрация
+button.send=Отправить
 
-label_user_reg=Author registration
-label_first_name=First name
-label_last_name=Last name
+
+label.first_name=Имя
+label.last_name=Фамилия
 label_email=Email
-label_login=Login
-label_password=Password
+label.login=Логин
+label.password=Пароль
+
+login.page.title=Аторизация
+chambers.page.title=Список палат
+registration.page.title=Регистрация
+add.page.title=Добавить палату
+edit.page.title=Изменить данные
+
+menu.home=Главная
+menu.test=Тестовая
+menu.js=js-таблица
+menu.rest=Rest данные
+menu.login=Вход
+menu.logout=Выход
