--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -1,43 +1,38 @@
 validation.chamber.name.size=Название палалты должно содержать от {min} до {max} символов!
-login_failed=Неверное сочетание логина и пароля
-user_create_fail=Ошибка добавления пользователя
-chambers.title=Список палат (%s)
-
-
 validation.user.firstname.pattern=Имя должно начинаться с заглавной буквы!
 validation.user.firstname.size=Длинна имени должно быть от {min} до {max} символов!
-
 validation.user.lastname.pattern=Фамилия должна начинаться с заглавной буквы!
 validation.user.lastname.size=Длинна фамилии должна быть от {min} до {max} символов!
-
 validation.user.login.pattern=Логин может содержать латинские буквы, цифры и должен быть длиннее 3 символов!
 validation.user.password.pattern=Длинна пароля должна быть не менее {min} символов!
 validation.user.email.pattern=Email введен некоректно!
 
+login_failed=Неверное сочетание логина и пароля
+user_create_fail=Ошибка добавления пользователя
+chambers.title=Список палат (%s)
 user_login_exist=Пользователь с таким логином существует
+welcome.message=тестовое сообщение
 
-welcome.message=Сообщение свойств
+table.chamber.id=ИД
+table.chamber.name=Название
+table.chamber.region=Регион
+table.chamber.district=Округ
+table.chamber.action=Действие
+table.chamber.address=Адрес
 
-table_chamber_id=ИД
-table_chamber_name=Название
-table_chamber_region=Регион
-table_chamber_district=Округ
-table_chamber_action=Действие
-table_chamber_address=Адрес
+menu.home=Главная
+menu.test=Тестовая
+menu.js=js-таблица
+menu.rest=Rest данные
+menu.login=Вход
+menu.logout=Выход
 
-menu_chambers_list=список палат
-menu_add_chamber=добавить палату
-menu_other=сраница
-menu_jsf=jsf тест
-
-button_save=сохранить
-button_remove=удалить
-button_edit=изменить
-
+button.save=сохранить
+button.remove=удалить
+button.edit=изменить
 button.login=Войти
 button.registration=Регистрация
 button.send=Отправить
-
 
 label.first_name=Имя
 label.last_name=Фамилия
@@ -51,9 +46,4 @@ registration.page.title=Регистрация
 add.page.title=Добавить палату
 edit.page.title=Изменить данные
 
-menu.home=Главная
-menu.test=Тестовая
-menu.js=js-таблица
-menu.rest=Rest данные
-menu.login=Вход
-menu.logout=Выход
+
