--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -1,43 +1,38 @@
 validation.chamber.name.size=Name must be between {min} and {max}!
-login_failed=Login or password incorrect!
-user_create_fail=Create user failed!
-chambers.title=Chambers list (%s)
-
-
 validation.user.firstname.pattern=The first name must begin with a capital letter!
 validation.user.firstname.size=First name must be between {min} and {max}!
-
 validation.user.lastname.pattern=Last name must begin with a capital letter!
 validation.user.lastname.size=Last name must be between {min} and {max}!
-
 validation.user.login.pattern=Login can contain from Latin letters, underscores, numbers and must be longer than 3 characters!
 validation.user.password.pattern=The password must be at least {min} characters in length!
 validation.user.email.pattern=Email is incorrect!
 
+login_failed=Login or password incorrect!
+user_create_fail=Create user failed!
+chambers.title=Chambers list (%s)
 user_login_exist=User with such login exists
+welcome.message=test message
 
-welcome.message=Property message
+table.chamber.id=Id
+table.chamber.name=Name
+table.chamber.region=Region
+table.chamber.district=District
+table.chamber.action=Action
+table.chamber.address=Address
 
-table_chamber_id=Id
-table_chamber_name=Name
-table_chamber_region=Region
-table_chamber_district=District
-table_chamber_action=Action
-table_chamber_address=Address
+menu.home=Home
+menu.test=Tests
+menu.js=js-table
+menu.rest=Rest data
+menu.login=login
+menu.logout=logout
 
-menu_chambers_list=chambers list
-menu_add_chamber=add chamber
-menu_other=page
-menu_jsf=jsf test
-
-button_save=save
-button_remove=remove
-button_edit=edit
-
+button.save=save
+button.remove=remove
+button.edit=edit
 button.login=Login
 button.registration=Registration
 button.send=Send
-
 
 label.first_name=First name
 label.last_name=Last name
@@ -50,10 +45,3 @@ chambers.page.title=Chambers list
 registration.page.title=Registration
 add.page.title=Add chamber
 edit.page.title=Edit chamber
-
-menu.home=Home
-menu.test=Tests
-menu.js=js-table
-menu.rest=Rest data
-menu.login=login
-menu.logout=logout
